@startuml Rendering Architecture - Simplified

skinparam packageStyle rectangle
skinparam shadowing false

title R-Type Rendering Architecture - Current Implementation

' ============================================
' ENGINE RENDERING
' ============================================

package "engine/rendering/" #FCE4EC {
    
    interface IRenderer {
        + clear()
        + draw()
        + present()
    }
    
    interface ITexture {
        + getSize()
        + loadFromFile()
    }
    
    interface ISprite {
        + setTexture()
        + setPosition()
    }
    
    class Camera {
        - position: Vector2f
        - zoom: float
        --
        + worldToScreen()
        + screenToWorld()
    }
    
    note right of Camera
        **Pure Math Logic**
        No SFML dependency
        Reusable everywhere
    end note
}

package "engine/rendering/sfml/" #F8BBD0 {
    
    class SFMLWindow {
        - window: sf::RenderWindow
        --
        + create()
        + pollEvent()
        + clear()
        + display()
        + getMousePosition()
    }
    
    class SFMLRenderer {
        + clear()
        + draw()
        + present()
    }
    
    class SFMLTexture {
        + getSize()
        + loadFromFile()
    }
    
    class SFMLSprite {
        + setTexture()
        + setPosition()
    }
    
    IRenderer <|.. SFMLRenderer
    ITexture <|.. SFMLTexture
    ISprite <|.. SFMLSprite
    
    note bottom of SFMLWindow
        **All SFML encapsulation here**
        Complete standalone class
        No Window base class
    end note
}

' ============================================
' CLIENT USAGE
' ============================================

package "client/" #E1F5FE {
    
    class ClientMain {
        + main()
    }
    
    class Menu {
        - window: SFMLWindow&
        --
        + handleInput()
        + render()
    }
    
    ClientMain --> SFMLWindow : creates & uses
    ClientMain --> SFMLRenderer : uses
    ClientMain --> Camera : uses
    Menu --> SFMLWindow : uses
    
    note right of ClientMain
        **Client code:**
        SFMLWindow window;
        window.create(1920, 1080);
        
        Uses engine's SFML encapsulation
        No need to wrap SFML again
    end note
}

' ============================================
' KEY POINTS
' ============================================

note as N1
    **Architecture Summary:**
    ✅ Camera = Pure logic (engine/)
    ✅ SFMLWindow = Complete encapsulation (engine/rendering/sfml/)
    ✅ Client = Uses engine's encapsulation directly
    ❌ No Window base class (removed)
    ❌ Client doesn't wrap SFML
end note

@enduml
